--- a/package.json
+++ b/package.json
@@ -6,29 +6,31 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "~1.15.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "es": "^0.5.2",
     "express": "~4.16.0",
+    "express-paginate": "^0.2.2",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "jwt-simple": "^0.5.1",
     "mongodb": "^3.0.7",
+    "mongoose": "^4.13.12",
+    "mongoose-paginate": "^5.0.3",
+    "mongoose-unique-validator": "^1.0.3",
     "morgan": "~1.9.0",
-      "bcrypt": "^1.0.2",
-      "body-parser": "~1.15.2",
-      "connect-flash": "^0.1.1",
-      "es": "^0.5.2",
-      "express-paginate": "^0.2.2",
-      "jwt-simple": "^0.5.1",
-      "mongoose": "^4.7.6",
-      "mongoose-paginate": "^5.0.3",
-      "mongoose-type-email": "^1.0.2",
-      "mongoose-type-url": "^1.0.2",
-      "mongoose-unique-validator": "^1.0.3",
-      "node-sass-middleware": "0.9.8",
-      "node-uuid": "^1.4.7",
-      "passport": "^0.3.2",
-      "passport-jwt": "^2.2.1",
-      "passport-local": "^1.0.0",
-      "serve-favicon": "~2.3.0"
-    }
+    "node-sass-middleware": "0.9.8",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
+    "passport-local": "^1.0.0",
+    "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "bcrypt": "^2.0.1",
+    "mongoose-type-email": "^1.0.5",
+    "mongoose-type-url": "^1.0.2",
+    "node-uuid": "^1.4.8"
+  }
 }
